# gpt-flashcards

./: .gitignore  README.rst  config.yaml  dump.py  pyproject.toml
flashcards/: __main__.py  anki.py  sanitize.py  sentences.py
prompts/: japanese.txt  polish.txt
